fix white space margin

--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -1,3 +1,11 @@
+html  {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden; 
+}
+
 .card-body-icon{
   position: absolute;
   z-index: 0;
